add conference endpoints
